RulesAnalyser: fix isDecidable()